--- a/myProject1/src/app/components/find-patient/find-patient.component.html
+++ b/myProject1/src/app/components/find-patient/find-patient.component.html
@@ -7,8 +7,7 @@
   <fieldset>
     <legend> Type patient's ID </legend>
     <div class="form-field">
-      <label> ID: </label>
-      <input name="ID" [(ngModel)]="ID">
+      <input name="ID" [(ngModel)]="ID" placeholder="Enter The ID">
     </div>
   </fieldset>
   <p>
