--- a/myProject1/src/app/dropbox/dropbox.component.html
+++ b/myProject1/src/app/dropbox/dropbox.component.html
@@ -1,1 +1,3 @@
-<p>dropbox works!</p>
+<select>
+  <option *ngFor="let o of listOfOptions" value=o (click)="clickOnOption(o)">{{o}}</option>
+</select>
