--- a/myProject1/src/app/components/catagory/catagory.component.css
+++ b/myProject1/src/app/components/catagory/catagory.component.css
@@ -58,6 +58,10 @@
   background: lightsalmon;
 }
 .col {
-  flex: auto;
+  float: right;
+  width: 16%;
+  margin-left: 4%;
+  margin-right: 4%;
+  direction: rtl;
 }
 
