--- a/myProject1/src/app/components/kind-card/kind-card.component.html
+++ b/myProject1/src/app/components/kind-card/kind-card.component.html
@@ -1,3 +1,3 @@
+<a mat-raised-button color="primary" class="tab" (click)="ClickOnDiagnosis()"> {{name}} </a>
 
-<button class="button" (click)="ClickOnDiagnosis()"> {{name}} </button>
 
