--- a/myProject1/src/app/components/diagnosis-form/diagnosis-form.component.html
+++ b/myProject1/src/app/components/diagnosis-form/diagnosis-form.component.html
@@ -3,7 +3,7 @@
 
   <input  matInput type="checkbox" >
   </mat-form-field>
-  
+
 
 
   <mat-form-field *ngFor="let text of texts"  >
@@ -12,4 +12,4 @@
   </mat-form-field>
 </div>
 
-  <button mat-raised-button color="primary" (click)="onClick()" >Primary</button>
+  <button mat-raised-button color="primary" (click)="showSummary()" >Primary</button>
