--- a/myProject1/src/app/components/diagnosis/diagnosis.component.html
+++ b/myProject1/src/app/components/diagnosis/diagnosis.component.html
@@ -40,4 +40,5 @@
   <h3>Question and Answers Value:</h3>
   {{this.allQuestionsAndAnswers | json}}
 </div>
+<button class="center-button" mat-raised-button color="primary" type="submit" (click)="showSummary()">Show Summary</button>
 
