--- a/myProject1/src/app/short-text/short-text.component.html
+++ b/myProject1/src/app/short-text/short-text.component.html
@@ -1,4 +1,4 @@
-<form>
-  <label> {{this.question}} </label>
-  <input type="text" (keyup)="enteredText($event)" >
-</form>
+
+<mat-form-field>
+  <input matInput (keyup)="enteredText($event)" placeholder={{this.question}}>
+</mat-form-field>
