--- a/myProject1/src/app/components/diagnosis/diagnosis.component.html
+++ b/myProject1/src/app/components/diagnosis/diagnosis.component.html
@@ -3,42 +3,27 @@
     The Diagnosis is for: {{this.diagnosis}}
 </mat-toolbar>
 
-  <div *ngFor="let sec of this.sections;  let i = index">
+  <div class="diagnosis" *ngFor="let sec of this.sections;  let i = index">
     <div>
       <h3 *ngIf="sec !== 'התחלתי'">
       {{sec}}
       </h3>
     </div>
     <div *ngFor="let question of this.quesForSec[i] " [ngSwitch]="question.Type">
-      <form *ngSwitchCase="1"   >
-        <app-checkbox  (isTrueEmit)='DoThisWhenInput($event)'  [question]="question.Question"></app-checkbox>
-      1
+      <form *ngSwitchCase="1">
+        <!---<app-checkbox  (isTrueEmit)='DoThisWhenInput($event)'  [question]="question.Question"></app-checkbox>-->
+        <app-toggle-button (changedEmit)='DoThisWhenInput($event)' [question]="question.Question"></app-toggle-button>
       </form>
       <form *ngSwitchCase="2">
         <app-short-text (textEmiter)='DoThisWhenInput($event)' [question]="question.Question"></app-short-text>
-        2
       </form>
       <form *ngSwitchCase="3">
         <app-dropbox (selectEmiter)='DoThisWhenInput($event)' [listOfOptions]="question.Options" [question]="question.Question"></app-dropbox>
-        3
       </form>
       <form *ngSwitchCase="4">
         <app-long-text (textEmiter)='DoThisWhenInput($event)' [question]="question.Question"></app-long-text>
-        4
       </form>
     </div>
   </div>
-  <div>
-    <h3>Patient Value:</h3>
-    {{this.patient | json}}
-  </div>
-  <div>
-    <h3>Question For Section Value:</h3>
-    {{this.quesForSec | json}}
-  </div>
-<div>
-  <h3>Question and Answers Value:</h3>
-  {{this.allQuestionsAndAnswers | json}}
-</div>
-<button class="center-button" mat-raised-button color="primary" type="submit" (click)="showSummary()">Show Summary</button>
+<button class="summary-button" mat-raised-button color="primary" type="submit" (click)="showSummary()">Show Summary</button>
 
