--- a/myProject1/src/app/components/catagory/catagory.component.html
+++ b/myProject1/src/app/components/catagory/catagory.component.html
@@ -5,4 +5,9 @@
   <div class="tab">
     <app-group-card class="col" *ngFor="let group of groups" [groupInput]="group" [patient]="this.patient">  </app-group-card>
   </div>
+<button (click)="backPage()" mat-icon-button class="summary-button" mat-raised-button color="primary" type="submit" matTooltip="חזור לעמוד הקודם"
+        matTooltipPosition="before"> <i class="material-icons">
+  navigate_before
+</i> </button>
+
 
