--- a/myProject1/src/app/components/kind-card/kind-card.component.html
+++ b/myProject1/src/app/components/kind-card/kind-card.component.html
@@ -1,3 +1,4 @@
-<a mat-raised-button color="primary" class="tab" (click)="ClickOnDiagnosis()"> {{name}} </a>
+<a mat-raised-button color="primary" class="tab" (click)="ClickOnDiagnosis()" [matTooltip]="name"
+   matTooltipPosition="before"> {{name}} </a>
 
 
