--- a/myProject1/src/app/components/diagnosis/diagnosis.component.css
+++ b/myProject1/src/app/components/diagnosis/diagnosis.component.css
@@ -9,12 +9,14 @@
   font-size: medium;
 }
 .summary-button {
-  margin-right: 30%;
-  margin-left: 33%;
-  margin-top: 10%;
+  float: right;
+  margin-right: 10%;
+  margin-top: 4%;
   margin-bottom: 10%;
-  border-radius: 2px;
+  border-radius: 4px;
   direction: rtl;
+  width: 6%;
+  height: 4%;
 }
 
 .diagnosis{
