--- a/myProject1/src/app/components/find-patient/find-patient.component.html
+++ b/myProject1/src/app/components/find-patient/find-patient.component.html
@@ -7,7 +7,7 @@
     </div>
   </fieldset>
   <p>
-    <button class="center-button" mat-raised-button color="primary" type="submit" (click)="FindPatientByID()" matTooltip="click to continue to treatment"
+    <button name="find-button" id="find-button" class="center-button" mat-raised-button color="primary" type="submit" (click)="FindPatientByID()" matTooltip="click to continue to treatment"
             matTooltipPosition="above">Search Patient</button>
   </p>
 </form>
