--- a/myProject1/src/app/bar/bar.component.html
+++ b/myProject1/src/app/bar/bar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar class="bar">
 
   <button (click)="showIdentity()" mat-icon-button class="summary-button" mat-raised-button color="primary" type="submit" matTooltip="הצג פרטי מטופל"
           matTooltipPosition="below"> <i class="material-icons">
